# ubuntu-touch-qml-iotivity

./: CMakeLists.txt  README.md  manifest.json.in
app/: CMakeLists.txt  Main.qml  SimpleC.desktop.in
app/tests/autopilot/: run
app/tests/autopilot/SimpleC/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/SimpleC/: backend.cpp  backend.h  mytype.cpp  mytype.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
include/: CMakeLists.txt  bluez-glue.h  object_manager-glue.h
lib/: CMakeLists.txt
lib/x86_64/: CMakeLists.txt
po/: simplec.woodrow-shen.pot
